--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,15 +10,24 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:shareit
+#spring.datasource.username=test
+#spring.datasource.password=test
+#--
 
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/shareIt
-#spring.datasource.username=shareIt_root_user
-#spring.datasource.password=pass
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL:http}
+#${SPRING_DATASOURCE_URL:http}
+#jdbc:postgresql://localhost:5432/shareIt
+
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#${SPRING_DATASOURCE_USERNAME}
+#shareIt_root_user
+
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#${SPRING_DATASOURCE_PASSWORD}
+#pass
 
 
